fixed form spacing

--- a/less/framework/base/forms.less
+++ b/less/framework/base/forms.less
@@ -562,6 +562,9 @@ div.scfForm {
 		margin-left: 0;
 		border-top-color: #ddd;
 	}
+	.scfDropListLabel, .scfEmailLabel, .scfMultipleLineTextLabel, .scfSingleLineTextLabel, .scfPasswordLabel, .scfNumberLabel, .scfDatePickerLabel, .scfDateLabel, .scfRadioButtonListLabel, .scfCheckBoxListLabel, .scfListBoxLabel, .scfFileUploadLabel, .scfDateSelectorLabel, .scfCreditCardLabel, .scfConfirmPasswordLabel, .scfCaptchaLabel, .scfTelephoneLabel, .scfSmsTelephoneLabel {
+		margin-right: 15px;
+	}
 }
 
 // Sitecore 10
